--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -155,16 +155,32 @@
   top: 100px;
   border-radius: 8px;
   font-family: "Arvo", serif;
-  background: #FFFFFF;
-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
-border-radius: 8px;
+  background: #ffffff;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
 }
 
-#wishList .card-header{
-
-  background-color: #EAEEF6;
+#wishList .card-header {
+  background-color: #eaeef6;
   border-top: 8px;
-  color:#052f5f !important;
+  color: #052f5f !important;
   text-align: center;
   font-size: 20px;
+}
+
+.wishlistRecord {
+  width: 272px;
+  height: 50px;
+  margin-left: 15px;
+  display: block;
+  background: #ffffff;
+  border: 2px solid #eaeef6;
+  box-sizing: border-box;
+}
+
+.companyLogo {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+  margin-top: 4px; 
 }
