--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -76,7 +76,7 @@ color: #052F5F;
   position: absolute;
 }
 
-#jobCategory {
+#jobRole {
   position: absolute;
   width: 145px !important;
   height: 40px !important;
@@ -94,7 +94,7 @@ color: #052F5F;
   padding: 0px;
 }
 
-#categoryIcon {
+#roleIcon {
   color: #052f5f !important;
   margin-left: 255px;
   bottom: 38px;
@@ -102,7 +102,7 @@ color: #052F5F;
   position: absolute;
 }
 
-#contractType {
+#entryLevel {
   position: absolute;
   width: 160px !important;
   height: 40px !important;
@@ -119,7 +119,7 @@ color: #052F5F;
   padding: 0px;
 }
 
-#contractIcon {
+#entryLevelIcon {
   color: #052f5f !important;
   margin-left: 500px;
   bottom: 38px;
