--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -80,7 +80,7 @@ color: #052F5F;
   position: absolute;
   width: 145px !important;
   height: 40px !important;
-  left: 280px;
+  left: 340px;
   margin-top: 10px;
   border: none !important;
   font-size: 1rem !important;
@@ -96,7 +96,7 @@ color: #052F5F;
 
 #roleIcon {
   color: #052f5f !important;
-  margin-left: 255px;
+  margin-left: 310px;
   bottom: 38px;
   font-size: 19px !important;
   position: absolute;
@@ -104,9 +104,9 @@ color: #052F5F;
 
 #entryLevel {
   position: absolute;
-  width: 160px !important;
+  width: 110px !important;
   height: 40px !important;
-  left: 525px;
+  left: 540px;
   margin-top: 10px;
   border: none !important;
   font-size: 1rem !important;
@@ -121,7 +121,7 @@ color: #052F5F;
 
 #entryLevelIcon {
   color: #052f5f !important;
-  margin-left: 500px;
+  margin-left: 513px;
   bottom: 38px;
   font-size: 19px !important;
   position: absolute;
@@ -129,7 +129,7 @@ color: #052F5F;
 
 .locationImg {
   position: absolute;
-  margin-left: 760px;
+  margin-left: 770px;
   bottom: 38px;
   width: 15px !important;
   height: 19px;
@@ -140,7 +140,7 @@ color: #052F5F;
   position: absolute;
   width: 130px !important;
   height: 40px !important;
-  left: 780px;
+  left: 795px;
   right: 88px !important;
   margin-top: 10px;
   border: none !important;
@@ -307,4 +307,61 @@ color: #052F5F;
   margin-top: 300px;
   text-align: center;
   color: #8A7F7F
+}
+
+/* filteredsearch display */
+
+#titleRow{
+  position: absolute;
+  margin-left: 50px;
+  margin-top: 30px;
+  font-family: "Arvo", serif;
+  color: #052f5f !important;
+  font-size: 1.05rem !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
+}
+
+#roleTitle{
+  margin-left: 212px;
+  position: absolute;
+}
+
+#locationTitle{
+  margin-left: 445px;
+  position: absolute;
+}
+
+#descriptionTitle{
+  margin-left: 690px;
+  position: absolute;
+}
+
+#filteredScroll{
+  position: absolute;
+  margin-top: 80px;
+  margin-left: 67px;
+}
+
+/* #companyRecord{
+  padding-top: 0px;
+  position: absolute;
+  margin-left: 50px
+} */
+
+#roleRecord{
+  margin-left: 0px;
+  margin-top: 0px;
+}
+
+/* #locationRecord{
+  padding-top: 0px;
+  margin-left: 443px
+} */
+
+#descriptionRecord{
+  /* position: absolute; */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
