--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -262,7 +262,6 @@ color: #052F5F;
 }
 
 
-
 /* CLOSED APPLICATIONS CARD   */
 
 .closedRecord{
@@ -313,7 +312,7 @@ color: #052F5F;
 
 #titleRow{
   position: absolute;
-  margin-left: 53px;
+  margin-left: 15px;
   margin-top: 30px;
   font-family: "Arvo", serif;
   color: #052f5f !important;
@@ -324,24 +323,24 @@ color: #052F5F;
 }
 
 #roleTitle{
-  margin-left: 180px;
+  margin-left: 183px;
   position: absolute;
 }
 
 #locationTitle{
-  margin-left: 449px;
+  margin-left: 455px;
   position: absolute;
 }
 
 #descriptionTitle{
-  margin-left: 630px;
+  margin-left: 638px;
   position: absolute;
 }
 
 #filteredScroll{
   position: absolute;
-  margin-top: 60px;
-  margin-left: 67px;
+  margin-top: 70px;
+  margin-left: 45px;
 }
 
 #record #descriptionRecord{
@@ -352,7 +351,19 @@ color: #052F5F;
 }
 
 #record{
-  margin-top: 2px
+  margin-top: 10px;
+  padding-left: 0px;
 }
 
-
+.detailsButton {
+  /* margin-left: 985px !important;
+  margin-top: 12px !important; */
+  border-radius: 8px;
+  font-family: "Arvo", serif;
+  width: 65px;
+  height: 30px;
+  background-color: #e5b85f;
+  color: #052f5f !important;
+  font-size: 12px;
+  margin-left: 50px
+}
