--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -208,7 +208,6 @@
 }
 
 .listCard .card-header {
-  background-color: #eaeef6;
   border-top: 8px;
   color: #052f5f !important;
   text-align: center;
@@ -247,6 +246,10 @@
   left: 40px;
 }
 
+.wishCard .card-header{
+  background-color: #eaeef6;
+}
+
 .seeMoreLink {
   display: block;
   position: absolute;
@@ -259,14 +262,14 @@
   margin-top: 100px !important;
 }
 
+.seeMoreLink.wishlist {
+  margin-top: 40px !important;
+}
+
 /* ACTIVE APPLICATIONS CARD   */
 
 .activeCard .card-header {
   background-color: #59ff60;
-  border-top: 8px;
-  color: #052f5f !important;
-  text-align: center;
-  font-size: 20px;
 }
 
 .listCard.activeCard {
@@ -287,10 +290,7 @@
 
 .closedCard .card-header {
   background-color: #f38982;
-  border-top: 8px;
-  color: #052f5f !important;
-  text-align: center;
-  font-size: 20px;
+
 }
 
 .seeMoreLink.closed {
