--- a/src/StyleSheets/Task.css
+++ b/src/StyleSheets/Task.css
@@ -1,20 +1,23 @@
 .titleRow {
   font-family: "Arvo", serif;
   color: #052f5f !important;
-  font-size: 15px;
-  font-weight: bold;
   left: 135px !important;
+  margin-top: 20px
 }
 
-.addTasksRow {
-  display: block !important;
+#taskHeader{
+  font-size: 15px !important;
+  font-weight: bold;
 }
 
 .addTask {
   display: inline-block !important;
   width: 50% !important;
-  margin-left: 120px;
+  margin-left: 125px;
   border: none !important;
+  font-family: "Arvo", serif;
+  color: #8a7f7f !important;
+  font-size: 15px !important;
 }
 
 #plusButton {
@@ -30,18 +33,30 @@
   color: #8a7f7f !important;
 }
 
-/* .tasksRow .addTaskCol #addTask{
-  padding: 0px !important;
-  width: 350px !important;
-  margin-left: 100px;
-  margin-top: 10px;
+/* .addTask::placeholder {
+  opacity: 1;
+} */
+
+.taskListRow{
+  left: 122px;
+  width: 340px !important
 }
 
+#allList{
+  font-family: "Arvo", serif;
+  color: #8a7f7f !important;
+  font-size: 15px !important;
+}
 
-
-  */
-
-  .addTask::placeholder {
-
-    opacity: 1;
-  } 
+#deleteTaskButton{
+  padding-top: 0px !important;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: #000;
+  border: none;
+  text-shadow: 0 1px 0 #fff;
+  background: #fcffff;
+  margin-bottom: 10px;
+  border: 1px solid #cccccc;
+  color: #8a7f7f !important;
+}
