--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -19,9 +19,10 @@
 .studentHomepage {
   background: #eaeef6 !important;
   height: 100%;
-  overflow-y: scroll;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: auto;
   position: absolute;
+
 }
 
 #logo {
